Fix deprecation warning.
Class#newInstance() should be replaced with Class#getDeclaredConstructor().newInstance()